# mpships-app-boilerplate

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_shortname}}/: README.md  app.py  pyproject.toml  run_app.py  run_example_app.py
{{cookiecutter.project_shortname}}/src/{{cookiecutter.project_shortname}}/: __init__.py  app.py  example_app.py
{{cookiecutter.project_shortname}}/src/{{cookiecutter.project_shortname}}/example_pages/: __init__.py  dielectric_function_viewer.py
{{cookiecutter.project_shortname}}/src/{{cookiecutter.project_shortname}}/pages/: __init__.py  {{cookiecutter.project_shortname}}.py
