[project]
name = "{{cookiecutter.project_shortname}}"
version = "{{ cookiecutter.first_version }}"
description = "{{ cookiecutter.description | replace('\\', '\\\\') | replace('\"', '\\\"') }}"
readme = "README.md"
authors = [
  {name = "{{ cookiecutter.author_name | replace('\\', '\\\\') | replace('\"', '\\\"') }}", email = "{{cookiecutter.author_email}}"}
]
maintainers = [
  {name = "{{ cookiecutter.author_name | replace('\\', '\\\\') | replace('\"', '\\\"') }}", email = "{{cookiecutter.author_email}}"}
]
classifiers = [
    # TODO
]
license = "{% set _license_identifiers = {'MIT License': 'MIT','BSD License': 'BSD','ISC License': 'ISC','Apache Software License 2.0': 'Apache-2.0','GNU General Public License v3': 'GPL-3.0','Not open source': ''} %}{{ _license_identifiers[cookiecutter.license] }}"
requires-python = ">= 3.11"

dependencies = [
  # "mpships_infra"
]

[project.optional-dependencies]
dev = ["pytest", "selenium", "pre-commit"]

[tool.ruff]
target-version = "py38"
select = [
  "B",   # flake8-bugbear
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "PIE", # flake8-pie
  "PT",  # flake8-pytest-style
  "PLE", # pylint error
  "PLW", # pylint warning
  "PYI", # flakes8-pyi
  "Q",   # flake8-quotes
  "SIM", # flake8-simplify
  "TID", # tidy imports
  "UP",  # pyupgrade
  "W",   # pycodestyle
  "YTT", # flake8-2020
]
ignore = [
  "B019",    # Use of functools.lru_cache or functools.cache on methods can lead to memory leaks
  "B028",    # No explicit stacklevel keyword argument found
  "B904",    # Within an except clause, raise exceptions with raise ... from err
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class
  "D102",    # Missing docstring in public method
  "D103",    # Missing docstring in public function
  "D104",    # Missing docstring in public package
  "D105",    # Missing docstring in magic method
  "D106",    # Missing docstring in public nested class
  "D107",    # Missing docstring in `__init__`
  "D205",    # 1 blank line required between summary line and description
  "E501",    # Line too long
  "PLW2901", # Outer for loop variable overwritten by inner assignment target
  "SIM105",  # Use contextlib.suppress(FileNotFoundError) instead of try-except-pass
  "SIM115",  # Use context handler for opening files
  "E731",    # Do not assign a `lambda` expression, use a `def`
  "G004",    # Allow logging statement uses f-string
]